--- a/tugas1.html
+++ b/tugas1.html
@@ -14,16 +14,19 @@
     <nav>
         <b>Navigasi</b>
     </nav>
-    <p><b>Ini Artikel</b>
+
+    <hr>
+    <p>
+        <b>Ini Artikel</b>
         <br>
         <img src="img/gambarpercobaan.png" alt="">
         <br>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore doloribus dolor exercitationem! Fugit ex consectetur, nemo reprehenderit commodi iusto laudantium aliquid rem numquam, sint sed neque eaque omnis rerum quaerat!
     </p>
 
+    <hr>
     <footer>
         <b>Ini Footer</b>
-        <br>
         <p>Akmal Fauzan Suranta</p>
         <a href="https://www.instagram.com/ouuzannn/">
             <img src="img/gambarig.png" alt="">->Link Instagram
