--- a/Tugas 2/landing.html
+++ b/Tugas 2/landing.html
@@ -63,7 +63,7 @@
                     </th>
                 </tr>
             </table>
-            <button type="submit">Cek Status!</button>
+            <button type="submit">Pinjam !</button>
         </form>
     </div>
 
